MOL-891: Subscription start, stop and skip

--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -21,7 +21,9 @@
                 <sw-label class="mollie-order-user-card-subscription-badge"
                           variant="info" size="medium" appearance="pill" :ghost="true" :caps="true"
                           :dismissable="false">
-                    {{ $tc('sw-order.detailExtended.subscriptionBadge') }}
+                    <router-link :to="{ name: 'mollie.payments.subscription_detail', params: { id: subscriptionId } }">
+                        {{ $tc('sw-order.detailExtended.subscriptionBadge') }}
+                    </router-link>
                 </sw-label>
             </div>
         </dd>
