--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.scss
@@ -1,3 +1,8 @@
-.mollie-subscriptions-grid-btn-cancel {
-    color: red;
+@import "~scss/variables";
+
+.mollie-subscriptions-grid-btn-edit {
+    a {
+        color: $color-darkgray-400;
+        text-decoration: none;
+    }
 }
