--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.scss
@@ -5,4 +5,9 @@
             text-decoration: none;
         }
     }
+
+    .mollie-subscriptions-detail-status-action-row {
+        margin-bottom: 20px;
+    }
+
 }
