--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
@@ -24,7 +24,7 @@
             {% block sw_order_detail_confirm_modal_cancel %}
                 <sw-confirm-modal
                         v-if="showConfirmCancel"
-                        type="delete"
+                        type="yesno"
                         :text="$tc('mollie-payments.subscriptions.confirm.cancel')"
                         @confirm="btnConfirmCancel_Click()"
                         @close="btnCloseAnyModal_Click()"
@@ -35,7 +35,7 @@
             {% block sw_order_detail_confirm_modal_pause %}
                 <sw-confirm-modal
                         v-if="showConfirmPause"
-                        type="delete"
+                        type="yesno"
                         :text="$tc('mollie-payments.subscriptions.confirm.pause')"
                         @confirm="btnConfirmPause_Click()"
                         @close="btnCloseAnyModal_Click()"
@@ -57,7 +57,7 @@
             {% block sw_order_detail_confirm_modal_skip %}
                 <sw-confirm-modal
                         v-if="showConfirmSkip"
-                        type="delete"
+                        type="yesno"
                         :text="$tc('mollie-payments.subscriptions.confirm.skip')"
                         @confirm="btnConfirmSkip_Click()"
                         @close="btnCloseAnyModal_Click()"
@@ -180,6 +180,7 @@
                             {% block sw_order_detail_card_status_action_pause %}
                                 <sw-button v-if="isAclEditAllowed && isPauseAllowed"
                                            class="mollie-subscriptions-detail-link-button cy-btn-pause"
+                                           :disabled="!allowPauseResume"
                                            variant="ghost-danger"
                                            @click="btnPause_Click()">
                                     {{ $tc('mollie-payments.subscriptions.detail.buttonPauseSubscription') }}
@@ -188,6 +189,7 @@
                             {% block sw_order_detail_card_status_action_resume %}
                                 <sw-button v-if="isAclEditAllowed && isResumeAllowed"
                                            class="mollie-subscriptions-detail-link-button cy-btn-resume"
+                                           :disabled="!allowPauseResume"
                                            variant="ghost"
                                            @click="btnResume_Click()">
                                     {{ $tc('mollie-payments.subscriptions.detail.buttonResumeSubscription') }}
@@ -196,6 +198,7 @@
                             {% block sw_order_detail_card_status_action_skip %}
                                 <sw-button v-if="isAclEditAllowed && isSkipAllowed"
                                            class="mollie-subscriptions-detail-link-button cy-btn-skip"
+                                           :disabled="!allowSkip"
                                            variant="ghost-danger"
                                            @click="btnSkip_Click()">
                                     {{ $tc('mollie-payments.subscriptions.detail.buttonSkipSubscription') }}
