NTR: fix stylelint

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-payments-format/mollie-pluginconfig-section-payments-format.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-payments-format/mollie-pluginconfig-section-payments-format.scss
@@ -1,6 +1,6 @@
 .mollie-pluginconfig-payments-format-preview {
     background-color: #f8f8f8;
-    border: solid 1px #189EFF;
+    border: solid 1px #189eff;
     border-radius: 9px;
     padding: 20px;
     margin-bottom: 20px;
