add: labels and translations

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
@@ -328,6 +328,7 @@
                                        type="textarea"
                                        v-model="refundDescription"
                                        class="field-description"
+                                       :label="$tc('mollie-payments.refund-manager.summary.lblDescription')"
                                        :placeholder="$tc('mollie-payments.refund-manager.summary.placeholderDescription')">
                     </sw-textarea-field>
                     {# --------------------------------------------------------------------------------------------- #}
@@ -335,6 +336,7 @@
                                        type="textarea"
                                        v-model="refundInternalDescription"
                                        class="field-description"
+                                       :label="$tc('mollie-payments.refund-manager.summary.lblInternalDescription')"
                                        :placeholder="$tc('mollie-payments.refund-manager.summary.placeholderInternalDescription')">
                     </sw-textarea-field>
                     {# --------------------------------------------------------------------------------------------- #}
