--- a/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
@@ -29,7 +29,7 @@
 
         {% if mollie_applepaydirect_enabled and ('pdp' not in mollie_applepaydirect_restrictions) and ((buyableLegacy) or (buyable and productPrice) > 0) %}
             {% block page_product_detail_buy_container_apple_direct_component %}
-                <div class="form-row mt-3 justify-content-end js-apple-pay-container">
+                <div class="form-row mt-3 justify-content-end js-apple-pay-container mollie-apple-pay-direct-pdp">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' with {cols: 'col-8'} %}
                 </div>
             {% endblock %}
