--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -18,7 +18,7 @@
 
         {% if mollie_applepaydirect_enabled and ('plp' not in mollie_applepaydirect_restrictions) and productPrice > 0 %}
             {% block component_product_box_action_buy_apple_direct_component %}
-                <div class="mb-2 d-none only-support-apple-pay js-apple-pay-container">
+                <div class="mb-2 d-none only-support-apple-pay js-apple-pay-container mollie-apple-pay-direct-listing">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
                 </div>
             {% endblock %}
