--- a/src/Resources/views/storefront/page/account/payment/index.html.twig
+++ b/src/Resources/views/storefront/page/account/payment/index.html.twig
@@ -1,10 +1,14 @@
 {% sw_extends '@Storefront/storefront/page/account/payment/index.html.twig' %}
 
 {% block page_account_payment %}
-    <div id="mollie_hide_applepay" data-mollie-template-applepay-account data-mollie-apple-pay-payment-method-options="{{ {
-        shopUrl: seoUrl('frontend.home.page'),
-        hideAlways: true
-    }
-    |json_encode }}"></div>
+
+    {% if mollie_applepay_enabled %}
+        <div id="mollie_hide_applepay" data-mollie-template-applepay-account data-mollie-apple-pay-payment-method-options="{{ {
+            shopUrl: seoUrl('frontend.home.page'),
+            hideAlways: true
+        }
+        |json_encode }}"></div>
+    {% endif %}
+
     {{ parent() }}
 {% endblock %}
