--- a/src/Resources/views/storefront/page/checkout/confirm/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/confirm/index.html.twig
@@ -1,11 +1,14 @@
 {% sw_extends '@Storefront/storefront/page/checkout/confirm/index.html.twig' %}
 
 {% block page_checkout_main_content %}
-    <div id="mollie_hide_applepay" data-mollie-template-applepay-checkout data-mollie-apple-pay-payment-method-options="{{ {
-        shopUrl: seoUrl('frontend.home.page'),
-        hideAlways: false
-    }
-    |json_encode }}"></div>
+
+    {% if mollie_applepay_enabled %}
+        <div id="mollie_hide_applepay" data-mollie-template-applepay-checkout data-mollie-apple-pay-payment-method-options="{{ {
+            shopUrl: seoUrl('frontend.home.page'),
+            hideAlways: false
+        }
+        |json_encode }}"></div>
+    {% endif %}
 
     {% if page.enable_credit_card_components == true %}
         <script src="https://js.mollie.com/v1/mollie.js"></script>
