NTR: move Apple Pay Direct button on listing below Shopware button

--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -3,6 +3,8 @@
 
 {% block component_product_box_action_buy %}
 
+    {{ parent() }}
+
     {% block component_product_box_action_buy_apple_direct %}
 
         {% set productPrice = 0 %}
@@ -18,15 +20,13 @@
 
         {% if mollie_applepaydirect_enabled and ('plp' not in mollie_applepaydirect_restrictions) and productPrice > 0 %}
             {% block component_product_box_action_buy_apple_direct_component %}
-                <div class="mb-2 d-none only-support-apple-pay js-apple-pay-container mollie-apple-pay-direct-listing">
+                <div class="mt-2 d-none only-support-apple-pay js-apple-pay-container mollie-apple-pay-direct-listing">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
                 </div>
             {% endblock %}
         {% endif %}
 
     {% endblock %}
-
-    {{ parent() }}
 
 {% endblock %}
 
