--- a/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
+++ b/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
@@ -3,12 +3,14 @@
 
 {% block component_offcanvas_cart_actions_checkout %}
     {{ parent() }}
-    {% if mollie_applepaydirect_enabled and ('offcanvas' not in mollie_applepaydirect_restrictions) %}
-        {% block component_offcanvas_cart_actions_checkout_apple_direct_component %}
-            <div class="mt-2 js-apple-pay-container mollie-apple-pay-direct-offcanvas">
-                {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
-            </div>
-        {% endblock %}
+    {% if page.cart.lineItems|length > 0 %}
+        {% if mollie_applepaydirect_enabled and ('offcanvas' not in mollie_applepaydirect_restrictions) %}
+            {% block component_offcanvas_cart_actions_checkout_apple_direct_component %}
+                <div class="mt-2 js-apple-pay-container mollie-apple-pay-direct-offcanvas">
+                    {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
+                </div>
+            {% endblock %}
+        {% endif %}
     {% endif %}
 {% endblock %}
 
