NTR: Show tutorial text

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
@@ -154,7 +154,7 @@
                             </sw-button>
                         </div>
                     </sw-container>
-                    <sw-container v-if="roundingDiff" columns="1fr 20fr" class="instructions-block">
+                    <sw-container columns="1fr 20fr" class="instructions-block">
                         <sw-icon name="default-money-cash" :small="false"
                                  class="instructions-block-icon color-refund"></sw-icon>
                         <div>
