--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -3,3 +3,4 @@
 @import "./checkout/payment-selection";
 @import "./account/payment-selection";
 @import "./account/subscriptions";
+@import "./component/credit-card-mandate";
