--- a/src/Resources/app/administration/src/extension/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/src/Resources/app/administration/src/extension/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -2,13 +2,13 @@
     {% parent %}
 
     <router-link v-else-if="type === 'mollie_subscription'"
-                 v-bind:to="{ name: 'mollie.payments.subscription', params: { id: item.id } }"
+                 :to="{ name: 'mollie.payments.subscription', params: { id: item.id } }"
                  ref="routerLink"
                  class="sw-search-bar-item__link">
         {% block sw_search_bar_item_mollie_subscription_label %}
             <span class="sw-search-bar-item__label">
-                <sw-highlight-text v-bind:searchTerm="searchTerm"
-                                   v-bind:text="item.description">
+                <sw-highlight-text :searchTerm="searchTerm"
+                                   :text="item.description">
                 </sw-highlight-text>
             </span>
         {% endblock %}
