--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
@@ -1,5 +1,14 @@
 {% block mollie_payments_subscription_list %}
     <sw-page class="mollie-subscriptions">
+        {% block mollie_payments_subscription_list_search_bar %}
+            <template #search-bar>
+                <sw-search-bar initialSearchType="mollie_subscription"
+                               :initialSearch="term"
+                               @search="onSearch">
+                </sw-search-bar>
+            </template>
+        {% endblock %}
+
         {% block mollie_payments_subscription_list_smart_bar_header %}
             <template slot="smart-bar-header">
                 {% block mollie_payments_subscription_list_smart_bar_header_title %}
