--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -2,13 +2,22 @@
     {% parent %}
     {% block sw_order_list_grid_columns_mollie_abo %}
         <template #column-mollie="{ item }">
+            <sw-label v-if="isMollie(item)"
+                      variant="ghost"
+                      size="default"
+                      appearance="pill"
+                      :ghost="false"
+                      :caps="false"
+                      :dismissable="false">
+                {{ getMollieId(item) }}
+            </sw-label>
             <sw-label v-if="isMollieSubscription(item)"
                       variant="info"
                       size="default"
                       appearance="pill"
                       :ghost="false"
                       :caps="false"
-                      :dismissable="true">
+                      :dismissable="false">
                 {{ $tc('mollie-payments.sw-order-list.badgeSubscription') }}
             </sw-label>
         </template>
