Add sidebar and refresh button

--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
@@ -114,5 +114,15 @@
                 </sw-entity-listing>
             {% endblock %}
         </template>
+
+        <template #sidebar>
+            <sw-sidebar>
+                <sw-sidebar-item
+                    icon="regular-undo"
+                    :title="$tc('sw-product.list.titleSidebarItemRefresh')"
+                    @click="onRefresh"
+                />
+            </sw-sidebar>
+        </template>
     </sw-page>
 {% endblock %}
