Add icon compatibility

--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
@@ -118,7 +118,7 @@
         <template #sidebar>
             <sw-sidebar>
                 <sw-sidebar-item
-                    icon="regular-undo"
+                    :icon="compatibilityIcons.refresh"
                     :title="$tc('sw-product.list.titleSidebarItemRefresh')"
                     @click="onRefresh"
                 />
