Renamed property in admin listing

--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
@@ -53,7 +53,7 @@
                     {% endblock %}
 
                     {% block mollie_payments_subscription_list_content_status %}
-                        <template #column-mollieStatus="{ item }">
+                        <template #column-status="{ item }">
                             <sw-label :variant="statusColor(item.status)"
                                       size="medium"
                                       appearance="pill"
