MOL-783: add internal comments to refund manager (#469)

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
@@ -360,7 +360,18 @@
                                        type="textarea"
                                        v-model="refundDescription"
                                        class="field-description"
-                                       :placeholder="$tc('mollie-payments.refund-manager.summary.placeholderDescription')">
+                                       :label="descriptionCharacterCountingTitle"
+                                       :placeholder="$tc('mollie-payments.refund-manager.summary.placeholderDescription')"
+                                       :helpText="$tc('mollie-payments.refund-manager.summary.descriptionHelp')">
+                    </sw-textarea-field>
+                    {# --------------------------------------------------------------------------------------------- #}
+                    <sw-textarea-field v-if="isAclRefundAllowed"
+                                       type="textarea"
+                                       v-model="refundInternalDescription"
+                                       class="field-description"
+                                       :label="$tc('mollie-payments.refund-manager.summary.lblInternalDescription')"
+                                       :placeholder="$tc('mollie-payments.refund-manager.summary.placeholderInternalDescription')"
+                                       :helpText="$tc('mollie-payments.refund-manager.summary.internalDescriptionHelp')">
                     </sw-textarea-field>
                     {# --------------------------------------------------------------------------------------------- #}
                     <sw-checkbox-field v-if="isAclRefundAllowed && configVerifyRefund"
